# gb-cartpp

./: .gitattributes  .gitignore  LICENSE-MIT  README.markdown
.github/scripts/: install-cross.sh
.github/workflows/: ci.yml
.reuse/: dep5
bootloader/: config.s  crc16.s  entry.s  macros.inc  main.s  pic_extra.inc  protocol.inc  usb.inc  usb.s  usb_descriptors.s  usb_ep0_std.s  usb_vendor.s  utils.s
bootloader/GB-CARTPP-BL.X/: .gitignore  Makefile.license
bootloader/GB-CARTPP-BL.X/nbproject/: configurations.xml  project.xml
bootloader/release/: GB-CARTPP-DIY_bootloader_v1.1.hex.license  GB-CARTPP-DIY_bootloader_v1.2.hex  GB-CARTPP-XC_bootloader_v1.1.hex  GB-CARTPP-XC_bootloader_v1.2.hex  GB-CARTPP-XC_bootloader_v1.2.hex.license
firmware/: .clang-format  cmd_protocol.h  common.h  config.h  create-fw-archive.sh  diagnostics.h  hardware.c  hardware.h  main.c  pipe.h  usb.c  usb.h  usb_descriptors.c  usb_descriptors.h  usb_protocol.h
firmware/GB-CARTPP.X/: Makefile.license
firmware/GB-CARTPP.X/nbproject/: configurations.xml  project.xml
signing-keys/: E2984F7B7562E0A759A75F36BCF068A71B6D5A67.asc  E2984F7B7562E0A759A75F36BCF068A71B6D5A67.asc.license
software/: Cargo.toml
software/fwupd-cli/: Cargo.toml  build.rs
software/fwupd-cli/src/: bootloader.rs  device.rs  main.rs  update.rs
software/fwupd-lib/: Cargo.toml
software/fwupd-lib/src/: bootloader.rs  fw_image.rs  lib.rs
software/fwupd-lib/src/usb/: bootloader.rs  mod.rs
software/signing-keys/: E2984F7B7562E0A759A75F36BCF068A71B6D5A67.asc  E2984F7B7562E0A759A75F36BCF068A71B6D5A67.asc.license
