# SPDX-FileCopyrightText: 2019-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "gb-cartpp-fwupd"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
description = "Firmware updater for GB-CARTPP cartridge flashers/dumpers"
license = "MIT OR Apache-2.0"
build = "build.rs"

[[bin]]
name = "gbcartpp-fwupd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = "4.0.32"
crc16 = "0.4.0"
gb-cartpp-fwupd-lib = { path = "../fwupd-lib" }
indicatif = "0.17.2"
itertools = "0.10.5"
log = "0.4.17"
simplelog = "0.12.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "gbcartpp-fwupd.exe"
LegalCopyright = "Copyright © 2019-2022 Joonas Javanainen"
