# SPDX-FileCopyrightText: 2019-2020 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "gb-cartpp-fwupd-lib"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "gb_cartpp_fwupd"

[dependencies]
bitflags = "1.2"
crc16 = "0.4"
flate2 = "1.0"
ihex = "3.0"
libusb1-sys = "0.4"
log = "0.4"
pgp = "0.7"
rand = { version = "0.8", features = ["small_rng"] }
rsa = "0.3"
tar = "0.4"
thiserror = "1.0"
