# SPDX-FileCopyrightText: 2019-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "gb-cartpp-fwupd-lib"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
description = "Firmware updater for GB-CARTPP cartridge flashers/dumpers (library)"
license = "MIT OR Apache-2.0"

[lib]
name = "gb_cartpp_fwupd"

[dependencies]
bitflags = "1.3.2"
crc16 = "0.4.0"
flate2 = "1.0.25"
ihex = "3.0.0"
libusb1-sys = "0.6.4"
log = "0.4.17"
pgp = "0.9.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rsa = "0.7"
tar = "0.4.38"
thiserror = "1.0.38"
